# PDI2018-DDM-LSCH

./: Planificación.xlsx  README.md  TraductorLSCh_G3.doc
Avance Damian Quiroz/: README.md
Avance Damian Quiroz/LSCH_GUI_SVM/: LSHC_GUI.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
Avance Damian Quiroz/LSHC_GUI/: mainwindow.cpp  mainwindow.h  mainwindow.ui  qml.qrc
Avance Damian Quiroz/ObjectTracking/: main.cpp
Avance Damian Quiroz/SVM_TestTracking/: SVM_TestTracking.pro  main.cpp
Avance Damian Quiroz/SVM_testing/: main.cpp
Avance Francisco Frez/: README.md
Avance Francisco Frez/PruebasReconocedorMano/: README.md  ReconocedorNumerosMano.py
Avance Francisco Frez/SVM_reconocedorLetras/: README.md
Avance Francisco Frez/SVM_reconocedorNumeros/: README.md
Avance Ignacio Gaete/: README.md
Avance Ignacio Gaete/hand_detection/: CMakeCache.txt  CMakeLists.txt  HAND_DETECTION  Makefile  cmake_install.cmake  main.cpp
Avance Ignacio Gaete/hand_tracking/: CMakeCache.txt  CMakeLists.txt  HAND_TRACKING  Makefile  cmake_install.cmake  main.cpp
Avance Ignacio Gaete/svm_example/: CMakeCache.txt  CMakeLists.txt  Makefile  SVM  cmake_install.cmake
Avance Ignacio Gaete/svm_example/sources/: main.cpp
Avance Ignacio Gaete/take_photo/: CMakeCache.txt  CMakeLists.txt  Makefile  Take_photo  cmake_install.cmake  main.cpp
Avance Ignacio Gaete/take_video/: CMakeCache.txt  CMakeLists.txt  Makefile  Take_video  cmake_install.cmake  main.cpp
Avance Ignacio Gaete/take_video/video/: output_video.avi
Avance Marcelo Cardenas/: README.md  opencv.py
Avance Matias Contreras/: README.md
Avance Matias Contreras/GUI_Prototype/: GUI_Prototype  GUI_Prototype.pro  Makefile  (+6 more)
(+67 files in other folders)
